# logger

./: .gitignore  CMakeLists.txt
include/logger/: AbstractFilter.h  AbstractHandler.h  CStreamHandler.h  Logger.h  RegexSearchFilter.h  SearchFilter.h  StreamHandler.h  TextFilter.h
lib/logger/: CMakeLists.txt  CSTreamHandler.cpp  Logger.cpp  RegexSearchFilter.cpp  SearchFilter.cpp  StreamHandler.cpp  TextFilter.cpp
src/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt  LoggerTest.cpp  ThreadTest.cpp
